fixed bootstrap columns to display search card above weather results on mobile displays.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,6 @@
 
     .forecast-class {
         flex-direction: column;
-        font-size: 
     }
 
     .forecast-card {
@@ -120,5 +119,12 @@
 
     .forecast-card h6 {
         font-size: 1.25rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .content-wrapper {
+        flex-direction: column;
+        align-items: center;
     }
 }
